Fixed for overflowing bios + Average Stats

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ img {
     margin-right: 10px;
     margin-top: 5px;
     width: 230px;
-    height: 480px;
+    height: 100vh;
 }
 
 input {
